...
        android:paddingStart="@dimen/dialog_padding_horizontal"
        android:paddingEnd="@dimen/dialog_padding_horizontal"
        android:text="@string/menu_comments"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/navigation_menu_action_bookmarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
...
        android:paddingStart="@dimen/dialog_padding_horizontal"
        android:paddingEnd="@dimen/dialog_padding_horizontal"
        android:text="@string/menu_bookmarks"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/navigation_menu_action_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
...
